--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@
 html {
     width: 100%;
     height: 100%;
+    min-width: 860px;
 }
 body {
     width: 100%;
     height: 100%;
+    min-width: 860px;
     margin: 0px;
     overflow: hidden;
     color: azure;
@@ -45,6 +47,50 @@ body {
 .content {
     height: 90dvh;
     width: 100dvw;
+}
+.content .island {
+    display: block;
+    position: absolute;
+    background-color: #02020276;
+    left: 15%;
+    right: 10dvw;
+    top: 10%;
+    height: 70dvh;
+    width: 70dvw;
+    border-radius: 5dvh;
+    border: 2px dotted darkslategray;
+}
+.content .img {
+    display:block;
+    position: absolute;
+    height: 200px;
+    border-radius: 180px;
+    top: 25px;
+    left: 5dvw;
+}
+.content .subtext {
+    position: absolute;
+    top: 55px;
+    font-size: 20px;
+    align-items: center;
+}
+.context .about {
+    position: absolute;
+    top: 55px;
+    font-size: 25px;
+    align-items: center;
+}
+
+.content .text {
+    display: block;
+    position: absolute;
+    height: 60%;
+    width: 97%;
+    top: 250px;
+    left: 10px;
+}
+.langicons {
+    height: 4dvh;
 }
 
 
